<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <TextView
        android:text="@string/tv_eula_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview_primary_title_dialog"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/tv_eula_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_gravity="center_vertical|right"
        android:textAlignment="center" />

    <CheckBox
        android:text="@string/tv_eula_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/checkbox_style"
        android:id="@+id/cb_EULA" />

    <Button
        android:text="@string/tv_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_dialog_style_OK"
        android:id="@+id/bt_eula_OK" />

</LinearLayout>