<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_report_bad_use"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.insperion.sets.alarma.ReportBadUseActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/spinner_style"
            android:id="@+id/spinner3"
            android:spinnerMode="dialog"
            android:prompt="@string/sp_a_la_persona"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/spinner_style"
            android:id="@+id/nombre"
            android:spinnerMode="dialog"
            android:prompt="@string/sp_grupo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_descripcion"
            android:ems="10"
            style="@style/edittext_style"
            android:id="@+id/editText" />

        <Button
            android:text="@string/bt_reportar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:id="@+id/buttonReporta" />
    </LinearLayout>
</RelativeLayout>
