<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.insperion.sets.alarma.AddGroupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edittext_style"
            android:hint="@string/et_nombre_grupo"
            android:ems="10"
            android:id="@+id/Nombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edittext_style"
            android:hint="@string/et_descripcion"
            android:ems="10"
            android:id="@+id/DescripcionGrupo" />

        <Button
            android:text="@string/bt_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector_custom"
            style="@style/button_style"
            android:id="@+id/buttonCrearGrupo" />
    </LinearLayout>
</RelativeLayout>
